<resources>
    <!-- GUI -->
    <string name="app_name">Grocery List</string>
    <string name="grocery_name">Name:</string>
    <string name="grocery_amount">Amount:</string>
    <string name="grocery_amount_reduce" translatable="false">-</string>
    <string name="grocery_amount_increase" translatable="false">+</string>
    <string name="grocery_price">Price:</string>
    <string name="grocery_add">Add grocery</string>
    <string name="reset_form_inputs">Reset inputs</string>
    <string name="end_grocery_list">End list</string>
    <string name="new_grocery_list">Start new list</string>
    <string name="remove_grocery_from_list" translatable="false">❌</string>
    <string name="grocery_list_summary_title">Summary</string>
    <string name="grocery_list_summary_count">Item count:</string>
    <string name="grocery_list_summary_total_amount">Total amount:</string>
    <string name="grocery_list_summary_total_price">Total price</string>
    <string name="grocery_list_summary_format" translatable="false">Item count: %s, total amount: %s, total price: %s</string>
    <string name="grocery_list_remove_item_title" translatable="false">Delete item from list?</string>
    <!-- Validation -->
    <string name="error_title">And error occurred:</string>
    <string name="invalid_input">Invalid input!</string>
    <string name="invalid_product_name">Name must be a word.</string>
    <string name="invalid_product_amount">Amount must be a positive whole number.</string>
    <string name="invalid_product_price">Price must be a positive number.</string>
    <string name="form_fields_empty">Form fields can not be empty!</string>
    <string name="grocery_list_complete">Grocery list is complete. It can not be edited.</string>
    <string name="grocery_list_empty">Grocery list is empty.</string>
    <string name="grocery_empty_history">There are no previous lists saved.</string>
    <string name="unexpected_error">An unexpected error has occurred.</string>
</resources>