<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/cloud_gray"
    android:paddingTop="24dp"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/morning_green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/input_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnOrderPreserved="true"
            android:orientation="vertical"
            android:rowOrderPreserved="true"
            android:stretchColumns="2">

            <LinearLayout
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/item_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="8sp"
                    android:text="@string/grocery_name"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/black"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TableLayout
                android:id="@+id/item_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stretchColumns="1,2,3">

                <TableRow tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/item_amount_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center_vertical"
                        android:padding="8sp"
                        android:text="@string/grocery_amount"
                        android:textAlignment="gravity"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/reduce_item_amount_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cloud_gray"
                        android:text="@string/grocery_amount_reduce"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/item_amount_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:inputType="number"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/increase_item_amount_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint='@color/cloud_gray'
                        android:text="@string/grocery_amount_increase"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/item_price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="8sp"
                    android:text="@string/grocery_price"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_price_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/black"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TableLayout
                android:id="@+id/input_form_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow tools:ignore="UselessParent">

                    <Button
                        android:id="@+id/add_grocery_button"
                        style="@style/Base.CardView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/grass_green"
                        android:text="@string/grocery_add"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/reset_form_fields_button"
                        style="@style/Base.CardView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/cloud_gray"
                        android:text="@string/reset_form_inputs"
                        android:textColor="@color/black" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/groceries_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/grocery_list_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow tools:ignore="UselessParent">

                <Button
                    android:id="@+id/end_grocery_list_button"
                    style="@style/Base.CardView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/grass_green"
                    android:text="@string/end_grocery_list" />

                <Button
                    android:id="@+id/new_grocery_list_button"
                    style="@style/Base.CardView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/light_green"
                    android:text="@string/new_grocery_list" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>