<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:text="@string/grocery_name"
                android:textAlignment="gravity"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_amount_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:text="@string/grocery_amount"
                android:textAlignment="gravity"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_price_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:text="@string/grocery_price"
                android:textAlignment="gravity"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/remove_product"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/cloud_gray"
            android:text="@string/remove_grocery_from_list" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>